src/features/tools/components/Tools/Tool.css
.cea-tool-form-buttongroup {
  display: flex;
  align-items: center;

  gap: 12px;
}
.cea-tool-form-buttongroup button {
  font-size: 12px;
}

.cea-tool-suggestions {
  /* Reset default button styles */
  background: none;
  border: none;
  padding: 0;
  font: inherit;
  color: inherit;
  text-align: left;

  /* Align child elements */
  display: flex;
  gap: 8px;
  align-items: center;
}

.cea-tool-suggestions:hover {
  text-decoration: underline;
  color: #1677ff;
}

